# FMI_OOP_Image_Processing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  OOP_Project_Image_Processing.filters  OOP_Project_Image_Processing.sln  OOP_Project_Image_Processing.vcxproj  README.md
src/: Main.cpp
src/command/: Command.cpp  Command.h
src/error/: ParseError.h
src/image/: NetPBMImage.cpp  NetPBMImage.h  Pixel.cpp  Pixel.h
src/pixel/: Pixel.cpp  Pixel.h
src/util/: ConsoleDrawing.cpp  ConsoleDrawing.h  Log.h  Printable.cpp  Printable.h  StringUtils.cpp  StringUtils.h  Util.h
src/util/file/: ImageLoaderWrapper.h  PBMImageLoader.cpp  PBMImageLoader.h
tests/: CommandTestsHelper.h  NewCommand.test.cpp
tests/command/: NewCommand.test.cpp
tests/resources/: j.pbm  j_10x10.pbm  j_8x10.pbm  j_comments.pbm  portal_Companion_cube.pgm
tests/util/: StringUtils.test.cpp
tests/util/file/: PBMImageLoader.test.cpp
